fix vertical-align & package refactoring

--- a/src/_build.sass
+++ b/src/_build.sass
@@ -10,7 +10,7 @@ $data-list: map-merge($data-list, (text-decoration: make-map-list(none underline
 $data-list: map-merge($data-list, (text-indent: make-map-list($text-indents, $text-indents-rtl, $names: no-indent indent outdent)))
 $data-list: map-merge($data-list, (text-overflow: make-map-list(clip ellipsis, $names: text-clip ellipsis)))
 $data-list: map-merge($data-list, (text-shadow: make-map-list($text-shadows, $text-shadows-rtl, $names: -shadow-1 -shadow-2 -shadow-3)))
-$data-list: map-merge($data-list, (vertical-alignment: make-map-list(baseline middle top bottom, $names: -bl -m -t -b)))
+$data-list: map-merge($data-list, (vertical-align: make-map-list(baseline middle top bottom, $names: -bl -m -t -b)))
 $data-list: map-merge($data-list, (line-height: make-map-list($line-heights, $line-heights-rtl)))
 $data-list: map-merge($data-list, (letter-spacing: make-map-list($letter-spacings, $letter-spacings-rtl, -normal -dense -sparse)))
 $data-list: map-merge($data-list, (word-spacing: make-map-list($word-spacings, $word-spacings-rtl, -normal -dense -sparse)))
