--- a/src/_variables.sass
+++ b/src/_variables.sass
@@ -8,8 +8,8 @@ $tertiary-rtl: times sans-serif !default
 
 $code: Consolas, monaco, monospace !default
 
-$font-sizes: fib(0.7rem, 0.9rem, 6, $start-with-zero: false) !default
-$font-sizes-rtl: fib(0.6rem, 0.8rem, 6, $start-with-zero: false) !default
+$font-sizes: get-fibonacci-pattern(0.7rem, 0.9rem, 6, $start-with-zero: false) !default
+$font-sizes-rtl: get-fibonacci-pattern(0.6rem, 0.8rem, 6, $start-with-zero: false) !default
 
 $font-weights: 100 300 500 700 !default
 $font-weights-rtl: 200 400 700 900 !default
